# ldw-merge-skills-atv

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  requirements.txt  run.py  seed.py
app/: __init__.py
app/blueprints/: __init__.py  categories.py  clients.py  orders.py  products.py
app/models/: __init__.py
apps/backend/: .env.example  docker-compose.yml  main.py  pyproject.toml
apps/backend/src/: models.py
apps/backend/src/db/: seed.sql
apps/backend/src/routes/: authors.py  books.py  loans.py  members.py
